app7DataMasking/microservice2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app7-microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app7-microservice2
  template:
    metadata:
      labels:
        app: app7-microservice2
    spec:
      containers:
      - name: app7-microservice2
        image: b0rkemborina/zta-cybersec-suite:app7microservice2
        ports:
        - containerPort: 8061
