app7DataMasking/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app7-microservice2
spec:
  selector:
    app: app7-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8061
  type: ClusterIP
